syntax = "proto3";

package token.v1;

message TokenRequest {
  string email = 1;
  string card_number = 2;
  string ccv = 3;
  string expiration_year = 4;
  string expiration_month = 5;
}

message TokenResponse {
  string token = 1;
}

message ChargeRequest {}

message ChargeResponse {
  string email = 1;
  string card_number = 2;
  string expiration_year = 3;
  string expiration_month = 4;
}

service TokenService {
  rpc Tokens(TokenRequest) returns (TokenResponse) {}
  rpc Charges(ChargeRequest) returns (ChargeResponse) {}
}